--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,84 +13,114 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:orientation="vertical">
-        <TextView
-            android:id="@+id/result_area"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:textSize="45sp"
-            android:gravity="center_vertical|right"
-            android:padding="5dp"/>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:background="#FF5C6265" />
 
         <TextView
             android:id="@+id/formula_area"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:textSize="45sp"
+            android:textSize="25sp"
             android:gravity="center_vertical|right"
             android:padding="5dp"/>
+
+        <TextView
+            android:id="@+id/result_area"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:textSize="45sp"
+            android:textColor="@color/colorBlack"
+            android:gravity="center_vertical|right"
+            android:padding="5dp"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#FF5C6265" />
+
     </LinearLayout>
 
     <TableLayout
+        android:textSize="25sp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2">
 
         <TableRow android:layout_weight="1">
+            <Button android:id="@+id/btn_ce" android:text="CE" android:onClick="onClick"
+                android:textSize="25sp"
+                android:layout_height="match_parent" />
 
             <Button android:id="@+id/btn_c" android:text="C" android:onClick="onClick"
+                android:textSize="25sp"
                 android:layout_height="match_parent" />
             <Button android:id="@+id/btn_del" android:text="DEL" android:onClick="onClick"
+                android:textSize="25sp"
                 android:layout_height="match_parent" />
-            <Button android:id="@+id/btn_dot" android:text="." android:onClick="onClick"
+
+            <Button android:id="@+id/btn_div" android:text="/" android:onClick="onClick"
+                android:textSize="25sp"
                 android:layout_height="match_parent" />
-            <Button android:id="@+id/btn_add" android:text="+" android:onClick="onClick"
-                android:layout_height="match_parent" />
+
         </TableRow>
 
         <TableRow android:layout_weight="1">
             <Button android:id="@+id/btn_7" android:text="7" android:onClick="onClick"
+                android:textSize="25sp"
                 android:layout_height="match_parent" />
             <Button android:id="@+id/btn_8" android:text="8" android:onClick="onClick"
+                android:textSize="25sp"
                 android:layout_height="match_parent" />
             <Button android:id="@+id/btn_9" android:text="9" android:onClick="onClick"
+                android:textSize="25sp"
                 android:layout_height="match_parent" />
-            <Button android:id="@+id/btn_sub" android:text="-" android:onClick="onClick"
+
+            <Button android:id="@+id/btn_mul" android:text="*" android:onClick="onClick"
+                android:textSize="25sp"
                 android:layout_height="match_parent" />
         </TableRow>
 
         <TableRow android:layout_weight="1">
             <Button android:id="@+id/btn_4" android:text="4" android:onClick="onClick"
+                android:textSize="25sp"
                 android:layout_height="match_parent" />
             <Button android:id="@+id/btn_5" android:text="5" android:onClick="onClick"
+                android:textSize="25sp"
                 android:layout_height="match_parent" />
             <Button android:id="@+id/btn_6" android:text="6" android:onClick="onClick"
+                android:textSize="25sp"
                 android:layout_height="match_parent" />
-            <Button android:id="@+id/btn_mul" android:text="*" android:onClick="onClick"
+            <Button android:id="@+id/btn_sub" android:text="-" android:onClick="onClick"
+                android:textSize="25sp"
                 android:layout_height="match_parent" />
         </TableRow>
 
         <TableRow android:layout_weight="1">
             <Button android:id="@+id/btn_1" android:text="1" android:onClick="onClick"
+                android:textSize="25sp"
                 android:layout_height="match_parent" />
             <Button android:id="@+id/btn_2" android:text="2" android:onClick="onClick"
+                android:textSize="25sp"
                 android:layout_height="match_parent" />
             <Button android:id="@+id/btn_3" android:text="3" android:onClick="onClick"
+                android:textSize="25sp"
                 android:layout_height="match_parent" />
-            <Button android:id="@+id/btn_div" android:text="/" android:onClick="onClick"
+            <Button android:id="@+id/btn_add" android:text="+" android:onClick="onClick"
+                android:textSize="25sp"
                 android:layout_height="match_parent" />
         </TableRow>
 
         <TableRow android:layout_weight="1">
             <Button android:id="@+id/btn_0" android:text="0"
-                android:layout_span="3"  android:onClick="onClick"
+                android:layout_span="2"  android:onClick="onClick"
+                android:textSize="25sp"
                 android:layout_height="match_parent" />
+            <Button android:id="@+id/btn_dot" android:text="." android:onClick="onClick"
+                android:textSize="25sp"
+                android:layout_height="match_parent" />
+
             <Button android:id="@+id/btn_equ" android:text="=" android:onClick="onClick"
+                android:textSize="25sp"
                 android:layout_height="match_parent" />
         </TableRow>
 
